[gd_scene load_steps=5 format=3 uid="uid://d4kmo72krbika"]

[ext_resource type="Script" uid="uid://bbjmfs34j5om3" path="res://UI/Menu/main_menu.gd" id="1_wrubb"]
[ext_resource type="Texture2D" uid="uid://bvcd8mrho0fof" path="res://UI/Menu/button.png" id="2_fmybh"]
[ext_resource type="Script" uid="uid://crrg1tao3ygca" path="res://Audio/Music/music_manager.gd" id="2_t0n6y"]
[ext_resource type="FontFile" uid="uid://ct23a3jot53y2" path="res://UI/Menu/JetBrainsMono-VariableFont_wght.ttf" id="3_t0n6y"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wrubb")

[node name="MusicManager" type="AudioStreamPlayer" parent="."]
script = ExtResource("2_t0n6y")
metadata/_custom_type_script = "uid://crrg1tao3ygca"

[node name="OIDText" type="Label" parent="."]
layout_mode = 0
offset_left = 306.0
offset_top = 100.0
offset_right = 557.0
offset_bottom = 135.0

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 877.0
offset_top = 140.0
offset_right = 1127.0
offset_bottom = 180.0
pivot_offset = Vector2(125, 20)
placeholder_text = "OID"

[node name="Buttons" type="Node" parent="."]

[node name="CopyButton" type="TextureButton" parent="Buttons"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -551.0
offset_top = -174.0
offset_right = -251.0
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(150, 50)
texture_normal = ExtResource("2_fmybh")

[node name="CopyLabel" type="Label" parent="Buttons/CopyButton"]
layout_mode = 0
offset_left = 25.0
offset_top = 15.0
offset_right = 275.0
offset_bottom = 90.0
pivot_offset = Vector2(125, 37)
theme_override_fonts/font = ExtResource("3_t0n6y")
theme_override_font_sizes/font_size = 40
text = "Copy"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="TextureButton" parent="Buttons"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -551.0
offset_top = 76.0
offset_right = -251.0
offset_bottom = 176.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(150, 50)
texture_normal = ExtResource("2_fmybh")

[node name="StartLabel" type="Label" parent="Buttons/StartButton"]
layout_mode = 0
offset_left = 25.0
offset_top = 15.0
offset_right = 275.0
offset_bottom = 90.0
pivot_offset = Vector2(125, 37)
theme_override_fonts/font = ExtResource("3_t0n6y")
theme_override_font_sizes/font_size = 40
text = "Start"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HostButton" type="TextureButton" parent="Buttons"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -551.0
offset_top = -294.0
offset_right = -251.0
offset_bottom = -194.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(150, 50)
texture_normal = ExtResource("2_fmybh")

[node name="HostLabel" type="Label" parent="Buttons/HostButton"]
layout_mode = 0
offset_left = 25.0
offset_top = 15.0
offset_right = 275.0
offset_bottom = 90.0
pivot_offset = Vector2(125, 37)
theme_override_fonts/font = ExtResource("3_t0n6y")
theme_override_font_sizes/font_size = 40
text = "Host Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="JoinButton" type="TextureButton" parent="Buttons"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 274.0
offset_top = -309.0
offset_right = 574.0
offset_bottom = -209.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(150, 50)
texture_normal = ExtResource("2_fmybh")

[node name="JoinLabel" type="Label" parent="Buttons/JoinButton"]
layout_mode = 0
offset_left = 25.0
offset_top = 15.0
offset_right = 275.0
offset_bottom = 90.0
pivot_offset = Vector2(125, 37)
theme_override_fonts/font = ExtResource("3_t0n6y")
theme_override_font_sizes/font_size = 40
text = "Join Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsButton" type="TextureButton" parent="Buttons"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -551.0
offset_top = -123.0
offset_right = -251.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(150, 50)
texture_normal = ExtResource("2_fmybh")

[node name="SettingsLabel" type="Label" parent="Buttons/SettingsButton"]
layout_mode = 0
offset_left = 25.0
offset_top = 15.0
offset_right = 275.0
offset_bottom = 90.0
pivot_offset = Vector2(125, 37)
theme_override_fonts/font = ExtResource("3_t0n6y")
theme_override_font_sizes/font_size = 40
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitButton" type="TextureButton" parent="Buttons"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 274.0
offset_top = -118.0
offset_right = 574.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(150, 50)
texture_normal = ExtResource("2_fmybh")

[node name="ExitLabel" type="Label" parent="Buttons/ExitButton"]
layout_mode = 0
offset_left = 25.0
offset_top = 15.0
offset_right = 275.0
offset_bottom = 90.0
pivot_offset = Vector2(125, 37)
theme_override_fonts/font = ExtResource("3_t0n6y")
theme_override_font_sizes/font_size = 40
text = "Exit Game"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Buttons/CopyButton" to="." method="_on_copy_button_pressed"]
[connection signal="pressed" from="Buttons/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Buttons/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="Buttons/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="Buttons/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Buttons/ExitButton" to="." method="_on_exit_button_pressed"]
